update: README and Dockerfile for local testing and Lambda compatibility

--- a/image/Dockerfile
+++ b/image/Dockerfile
@@ -1,25 +1,24 @@
-# Development Dockerfile - much faster to build
 FROM public.ecr.aws/lambda/python:3.11
 
 # Set working directory
-WORKDIR /app
+WORKDIR ${LAMBDA_TASK_ROOT}
 
 # Copy the requirements file
 COPY requirements.txt .
 
 # Install the dependencies
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install -r requirements.txt --upgrade
 
 # Local Testing  
 EXPOSE 8000
 
 # Set Environment Variable 
 ENV IS_USING_IMAGE_RUNTIME=True
-ENV PYTHONPATH=/app
 
 # Copy the entire src directory
-COPY src/ /app/
+COPY src/ ${LAMBDA_TASK_ROOT}/
 
-# For Lambda compatibility, we still provide the handler
-# But also support direct Python execution
-CMD ["python", "main.py"]
+# ENV PYTHONPATH=${LAMBDA_TASK_ROOT}
+
+# Set the CMD to your handler 
+CMD [ "main.handler" ]
